# untyped-lambda-evaluator

./: .gitignore  README.md  about_pre_html.md  backlog.md  flake.nix  how_to_use_pre_html.md  lambda-calculus.cabal  notes.md
.github/workflows/: deploy.yml
app/: Main.hs
app/Web/: App.hs  Render.hs
examples/: forward_ref_result.lam  identity_let_apply.lam  local_boolean_if.lam  omega_short_circuit.lam  prelude_id_application.lam  prelude_plus_one_two.lam  sequence_of_primes.lam  shadow_prelude_id.lam
src/: Interpreter.hs  Lambda.hs  Named.hs  Parser.hs
static/: index.html  prelude.lam  styles.css
test/: AlphaEqSpec.hs  AlphaRenameSpec.hs  EvalWithTraceSpec.hs  FullBetaRSpec.hs  InterpreterSpec.hs  LambdaSpec.hs  NamedCallByNameSpec.hs  NamedSpec.hs  ParserSpec.hs  TestFixtures.hs
