cabal-version:      3.0
name:               lambda-calculus
version:            0.1.0.0
build-type:         Simple
-- extra-source-files:

common cm
    ghc-options: -Wall
    default-language: Haskell2010

library
    import:           cm
    exposed-modules:  Named,
                      Parser
    -- other-modules:
    -- other-extensions:
    build-depends:    base ^>=4.20.2.0,
                      megaparsec,
                      mtl,
                      dlist,
                      deepseq,
                      containers
    hs-source-dirs:   src

executable lambda-calculus
    import:           cm
    main-is:          Main.hs
    ghc-options: -threaded
    -- other-modules:
    -- other-extensions:
    build-depends:
        base ^>=4.20.2.0,
        scotty ^>=0.30,
        lambda-calculus,
        text,
        megaparsec,
        containers,
        wai,
        wai-middleware-static

    hs-source-dirs:   app

test-suite lambda-calculus-test
    import:           cm
    type:             exitcode-stdio-1.0
    main-is:          Spec.hs
    other-modules:
        AlphaRenameSpec
        NamedCallByNameSpec
        FullBetaRSpec
        AlphaEqSpec
        ParserSpec
        EvalWithTraceSpec
        TestFixtures
    hs-source-dirs:   test
    build-depends:
        base ^>=4.20.2.0,
        hspec,
        hspec-discover,
        megaparsec,
        containers,
        lambda-calculus
    build-tool-depends: hspec-discover:hspec-discover
