cabal-version:      3.14
name:               lambda-calculus
version:            0.1.0.0
build-type:         Simple
extra-source-files: static/prelude.lam

common cm
    ghc-options: -Wall
    default-language: Haskell2010

library
    import:           cm
    exposed-modules:  Named,
                      Parser,
                      Interpreter
    -- other-modules:
    -- other-extensions:
    build-depends:    base >=4.20 && <4.23,
                      megaparsec,
                      mtl,
                      dlist,
                      text,
                      deepseq,
                      containers,
                      file-embed == 0.0.16.0
    hs-source-dirs:   src

executable lambda-calculus
    import:           cm
    main-is:          Main.hs
    ghc-options: -threaded
    other-modules:
        Web.App
        Web.Render
    -- other-extensions:
    build-depends:
        base >=4.20 && <4.23,
        scotty ^>=0.30,
        lambda-calculus,
        text,
        megaparsec,
        containers,
        wai,
        wai-middleware-static

    hs-source-dirs:   app

test-suite lambda-calculus-test
    import:           cm
    type:             exitcode-stdio-1.0
    main-is:          Spec.hs
    other-modules:
        AlphaRenameSpec
        NamedCallByNameSpec
        FullBetaRSpec
        AlphaEqSpec
        ParserSpec
        EvalWithTraceSpec
        InterpreterSpec
        TestFixtures
    hs-source-dirs:   test
    build-depends:
        base >=4.20 && <4.23,
        hspec,
        text,
        hspec-discover,
        megaparsec,
        containers,
        filepath,
        lambda-calculus
    build-tool-depends: hspec-discover:hspec-discover
